fix small text align bug

--- a/framebuzz/static/framebuzz/marketing/css/sass/home.scss
+++ b/framebuzz/static/framebuzz/marketing/css/sass/home.scss
@@ -276,6 +276,8 @@ div.row.read-more-separator {
                 text-align: center;
                 position: absolute;
                 top: 663px;
+
+                p { text-align: center; }
             }
 
             div.signup-option {
